# solana-vrf

./: Cargo.toml
callback/rust/sdk/: Cargo.toml
callback/rust/sdk/src/sdk/: events.rs
callback/rust/sdk/src/sdk/instructions/: register.rs  set_callback.rs  transfer.rs  withdraw.rs
callback/rust/sdk/src/state/: network_state.rs
rust/examples/cpi/programs/russian-roulette/: Cargo.toml
rust/examples/cpi/programs/russian-roulette/src/: lib.rs
rust/examples/off-chain/: Cargo.toml
rust/sdk/: Cargo.toml
rust/sdk/src/sdk/: events.rs
