[package]
name = "orao-solana-vrf-cb"
version = "0.1.0"
edition = "2021"
authors = ["ORAO Devs <hello@orao.network>"]
homepage = "https://orao.network"
repository = "https://github.com/orao-network/solana-vrf/callback"
license = "Apache-2.0"
keywords = ["solana", "vrf", "ed25519", "anchor", "callback"]
description = "ORAO Verifiable Random Function for Solana."

[lib]
crate-type = ["cdylib", "lib"]
name = "orao_solana_vrf_cb"

[features]
default = ["sdk"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
sdk = ["no-entrypoint", "anchor-client", "ed25519-dalek", "tokio", "thiserror"]

[dependencies]
anchor-lang = { workspace = true }
anchor-client = { workspace = true, optional = true, features = ["async"] }
byteorder = { workspace = true }
ed25519-dalek = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
