[package]
name = "off-chain"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.20.3"
clap = { version = "4.5.31", features = ["derive", "env", "string"] }
anyhow = "1.0.97"
futures-util = "0.3.31"
tracing = "0.1.41"
solana-cli-config.workspace = true
anchor-client.workspace = true
anchor-lang.workspace = true
indicatif = "0.17"
orao-solana-vrf = { path = "../../sdk" }
tokio = { version = "1.43.0", features = ["full"] }
rand.workspace = true
